--- a/Calculator/res/layout/activity_main.xml
+++ b/Calculator/res/layout/activity_main.xml
@@ -1,22 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-   	xmlns:tools="http://schemas.android.com/tools" 
-   	android:layout_width="match_parent" 
-   	android:layout_height="match_parent" 
-   	android:orientation="vertical" 
-   	android:paddingBottom="@dimen/activity_vertical_margin" 
-   	android:paddingLeft="@dimen/activity_horizontal_margin" 
-   	android:paddingRight="@dimen/activity_horizontal_margin" 
-   	android:paddingTop="@dimen/activity_vertical_margin" 
-   	tools:context="com.example.calculator.MainActivity" 
-   	android:background="#000000"
- >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#000000"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.calculator.MainActivity" >
 
     <EditText
         android:id="@+id/txt"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:ems="15"
-        android:height="100dp"
+        android:height="90dp"
         android:textColor="#FFFFFF"
         android:textSize="30dp" >
 
@@ -28,45 +28,62 @@
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_gravity="center" 
-        android:gravity="center" 
-        android:paddingTop="4dp"> 
+        android:gravity="center"> 
         
    <Button 
-        android:layout_width="70dp" 
-        android:layout_height="60dp"
-        android:layout_marginRight="4dp"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
+      
         android:id = "@+id/cbtn" 
         android:textColor="#FFFFFF"
-        android:background="#666362"
+        android:background="#3D3C3A"
         android:textSize="20dp" 
         android:text="C" /> 
             
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
-       android:layout_marginRight="4dp"
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
        android:id = "@+id/mcbtn" 
        android:textColor="#FFFFFF"
-       android:background="#666362"
+       android:background="#3D3C3A"
        android:textSize="20dp" 
        android:text="MC" /> 
             
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp"
-       android:layout_marginRight="4dp" 
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
        android:id = "@+id/mrbtn"
        android:textColor="#FFFFFF"
-       android:background="#666362"
+       android:background="#3D3C3A"
        android:textSize="20dp"  
        android:text="MR" /> 
                 
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="3dp"
        android:id = "@+id/mbtn"
        android:textColor="#FFFFFF"
-       android:background="#666362"
+       android:background="#3D3C3A"
        android:textSize="20dp"  
        android:text="M+" /> 
            
@@ -78,37 +95,44 @@
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_gravity="center" 
-        android:gravity="center" 
-        android:paddingTop="3dp"> 
+        android:gravity="center"> 
         
             
    <Button 
-       android:layout_width="146dp" 
-       android:layout_height="60dp" 
-       android:layout_marginRight="4dp"
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="2"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
        android:id = "@+id/backbtn"
        android:textColor="#FFFFFF"
-       android:background="#666362"       
+       android:background="#3D3C3A"       
        android:textSize="20dp"  
        android:text="Back" /> 
             
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp"
-       android:layout_marginRight="4dp" 
+       android:layout_width="83.5dp"
+        android:layout_height="55dp"
+        android:layout_margin="3dp"
        android:id = "@+id/nbtn"
        android:textColor="#FFFFFF"
-       android:background="#666362"
+       android:background="#3D3C3A"
        android:textSize="20dp"  
        android:text="N" /> 
                 
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
+       android:layout_width="83.5dp"
+        android:layout_height="55dp"
+         android:layout_marginTop="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="3dp"
        android:id = "@+id/divbtn"
        android:textColor="#FFFFFF"
-       android:background="#666362"
-       android:textSize="35dp"  
+       android:background="#3D3C3A"
+       android:textSize="30dp"  
        android:text="÷" /> 
            
    </LinearLayout>
@@ -119,46 +143,56 @@
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_gravity="center" 
-        android:gravity="center" 
-        android:paddingTop="3dp"> 
+        android:gravity="center"> 
         
    <Button 
-        android:layout_width="70dp" 
-        android:layout_height="60dp"
-        android:layout_marginRight="4dp"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+         android:layout_marginTop="3dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
         android:id = "@+id/sevenbtn"
-        android:background="#2C3539" 
+        android:background="#161314" 
         android:textColor="#FFFFFF"
-       android:textSize="25dp"
+       android:textSize="20dp"
         android:text="7" /> 
             
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
-       android:layout_marginRight="4dp"
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+         android:layout_margin="3dp"
        android:id = "@+id/eightbtn" 
-       android:background="#2C3539"
+       android:background="#161314"
        android:textColor="#FFFFFF"
-       android:textSize="25dp"
+       android:textSize="20dp"
        android:text="8" /> 
             
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp"
-       android:layout_marginRight="4dp" 
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+         android:layout_margin="3dp"
        android:id = "@+id/ninebtn" 
-       android:background="#2C3539"
+       android:background="#161314"
        android:textColor="#FFFFFF"
-       android:textSize="25dp"
+       android:textSize="20dp"
        android:text="9" /> 
                 
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="3dp"
        android:id = "@+id/mulbtn"
        android:textColor="#FFFFFF"
-       android:background="#666362"
-       android:textSize="35dp"  
+       android:background="#3D3C3A"
+       android:textSize="30dp"  
        android:text="×" /> 
            
    </LinearLayout>
@@ -169,46 +203,56 @@
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_gravity="center" 
-        android:gravity="center" 
-        android:paddingTop="3dp"> 
+        android:gravity="center"> 
         
    <Button 
-        android:layout_width="70dp" 
-        android:layout_height="60dp"
-        android:layout_marginRight="4dp"
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
         android:id = "@+id/fourbtn" 
-        android:background="#2C3539"
+        android:background="#161314"
         android:textColor="#FFFFFF"
-       android:textSize="25dp"
+       android:textSize="20dp"
         android:text="4" /> 
             
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
-       android:layout_marginRight="4dp"
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_margin="3dp"
        android:id = "@+id/fivebtn" 
-       android:background="#2C3539"
+       android:background="#161314"
        android:textColor="#FFFFFF"
-       android:textSize="25dp"
+       android:textSize="20dp"
        android:text="5" /> 
             
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp"
-       android:layout_marginRight="4dp" 
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_margin="3dp"
        android:id = "@+id/sixbtn" 
-       android:background="#2C3539"
+       android:background="#161314"
        android:textColor="#FFFFFF"
-       android:textSize="25dp"
+       android:textSize="20dp"
        android:text="6" /> 
                 
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="3dp"
        android:id = "@+id/subbtn"
        android:textColor="#FFFFFF"
-       android:background="#666362"
-       android:textSize="35dp"  
+       android:background="#3D3C3A"
+       android:textSize="30dp"  
        android:text="-" /> 
            
    </LinearLayout>
@@ -219,46 +263,56 @@
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_gravity="center" 
-        android:gravity="center" 
-        android:paddingTop="3dp"> 
+        android:gravity="center"> 
         
    <Button 
-        android:layout_width="70dp" 
-        android:layout_height="60dp"
-        android:layout_marginRight="4dp"
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
         android:id = "@+id/onebtn" 
-        android:background="#2C3539"
+        android:background="#161314"
         android:textColor="#FFFFFF"
-       android:textSize="25dp"
+       android:textSize="20dp"
         android:text="1" /> 
             
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
-       android:layout_marginRight="4dp"
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_margin="3dp"
        android:id = "@+id/twobtn" 
-       android:background="#2C3539"
+       android:background="#161314"
        android:textColor="#FFFFFF"
-       android:textSize="25dp"
+       android:textSize="20dp"
        android:text="2" /> 
             
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp"
-       android:layout_marginRight="4dp" 
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_margin="3dp"
        android:id = "@+id/threebtn" 
-       android:background="#2C3539"
+       android:background="#161314"
        android:textColor="#FFFFFF"
-       android:textSize="25dp"
+       android:textSize="20dp"
        android:text="3" /> 
                 
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
+       android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="3dp"
        android:id = "@+id/addbtn"
        android:textColor="#FFFFFF"
-       android:background="#666362"
-       android:textSize="35dp" 
+       android:background="#3D3C3A"
+       android:textSize="30dp" 
        android:text="+" /> 
            
    </LinearLayout>
@@ -269,26 +323,33 @@
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_gravity="center" 
-        android:gravity="center" 
-        android:paddingTop="3dp"> 
+        android:gravity="center"> 
         
    <Button 
-       android:layout_width="220dp" 
-       android:layout_height="60dp"
-       android:layout_marginRight="3dp" 
+      android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_weight="3"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="3.5dp"
+        android:layout_marginBottom="0dp"
        android:id = "@+id/zerobtn"
        android:textColor="#FFFFFF"
-       android:background="#2C3539"
-       android:textSize="30dp" 
+       android:background="#161314"
+       android:textSize="20dp" 
        android:text="0" /> 
                 
    <Button 
-       android:layout_width="70dp" 
-       android:layout_height="60dp" 
+      android:layout_width="83dp"
+      android:layout_height="55dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="0dp"
        android:id = "@+id/equalbtn"
        android:textColor="#FFFFFF"
-       android:background="#FFA500"
-       android:textSize="40dp"
+       android:background="#F87217"
+       android:textSize="30dp"
        android:text="=" /> 
            
    </LinearLayout>
